confs/rules.v4
# Generated by iptables-save v1.8.4 on Thu Feb  9 03:19:06 2023
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [1775:1554868]
:TCP - [0:0]
:UDP - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -j REJECT --reject-with icmp-proto-unreachable
-A TCP -s 10.10.0.1/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A TCP -s 10.90.5.1/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A TCP -s 10.10.0.0/24 -p tcp -m tcp --dport 9100 -j ACCEPT
COMMIT
# Completed on Thu Feb  9 03:19:06 2023
